<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFF">
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/startCalc"
            android:background="#ffffffff"
            android:id="@+id/calcCostBtn" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:textSize="25sp" android:textColor="#ff000000" android:clickable="false"
            android:layout_marginTop="10dp"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/catResources"
            android:background="#ffffffff" android:id="@+id/addinfobtn"
            android:textSize="25sp"
            android:textColor="#ff000000" android:layout_below="@+id/calcCostBtn"
            android:layout_alignParentStart="true" android:layout_marginTop="10dp"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/catPics"
            android:background="#ffffffff" android:id="@+id/gall"
            android:textSize="25sp"
            android:textColor="#ff000000" android:layout_below="@+id/addinfobtn"
            android:layout_marginBottom="10dp"/>
    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/imageView" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:src="@drawable/catlookingup"
            android:layout_marginBottom="10dp"/>
</RelativeLayout>

